# scrfd

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  draw.py  flake.nix  pyproject.toml
.github/workflows/: actionlint.yml  ci.yml  deploy-webdemo.yml
fuzz/: README.md  fuzz_scrfd.py  helpers.py
models/: scrfd.onnx
scrfd/: __init__.py  base.py  pub.py
scrfd-python/: .gitignore  README.md  draw.py  generate_tests.py  pyproject.toml
scrfd-python/fuzz/: .gitignore  fuzz_scrfd.py  helpers.py
scrfd-python/src/scrfd/: __init__.py  base.py  common.py  pub.py
scrfd-python/tests/: conftest.py  test_data.py  test_props.py  test_readme.py  truth_faces.py
scrfd-python/tests/utils/: __init__.py  path.py  proptest.py
scrfd-rust/: .gitignore  Cargo.toml  README.md
scrfd-rust/examples/: run.rs
scrfd-rust/scrfd/: Cargo.toml
scrfd-rust/scrfd/examples/: run.rs
scrfd-rust/scrfd/src/: model.rs
scrfd-rust/src/: lib.rs  model.rs  schemas.rs
scrfd-rust/webdemo/: Cargo.toml
scrfd-rust/webdemo/src/: app.rs  imgproc.rs  inference.rs  lib.rs  main.rs  onframe.rs
src/scrfd/: base.py  pub.py  schemas.py
tests/: conftest.py  test_data.py  test_images.py  test_props.py  test_readme.py  test_samples.py  truth_faces.py  utils.py
tests/utils/: __init__.py
webdemo/: Cargo.toml  README.md  index.html
webdemo-js/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
webdemo-js/src/: App.css  App.tsx  drawFaces.ts  index.css
webdemo-js/src/scrfd/: model.ts  types.ts
webdemo-old/src/: canvas.rs
webdemo/src/: app.rs  common.rs  effects.rs  hooks.rs  image_processing.rs  lib.rs  onvideo.rs  reactor.rs  scheduler.rs  video_scheduler.rs  worker.rs
webdemo/src/scrfd/: types.ts
