[tool.poetry]
name = "scrfd"
version = "0.2.1"
description = "Efficient face detection using SCRFD onnxruntime inference"
repository = "https://github.com/cospectrum/scrfd"
authors = ["cospectrum <severinalexeyv@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26"
onnxruntime = "^1.16"
pillow = "^10"
pydantic = "^2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.6.1"
ruff = "^0.1.4"
pyright = "^1.1.334"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
