[project]
name = "scrfd"
version = "0.3.0"
description = "Efficient face detection using SCRFD"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "cospectrum", email = "severinalexeyv@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.0",
    "onnxruntime>=1.20.1",
    "pillow>=11.0.0",
    "pydantic>=2.10.4",
]

[project.urls]
Repository = "https://github.com/cospectrum/scrfd"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "atheris>=2.3.0",
    "hypothesis[numpy]>=6.123.2",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
    "types-atheris>=2.3.0.20240831",
]
